[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dlworkflow"
version = "0.1.0"
description = "Initialize a torch/NLP project directory with a venv and minimal deps"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Max Ren" }]
license = { text = "MIT" }

[project.scripts]
dlinit = "dlworkflow.cli:main"
dlnb = "dlworkflow.cli:notebook_main"
dlnote = "dlworkflow.cli:note_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
